--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -271,10 +271,25 @@ section#landing{
 .logo{
     margin-top: 30vh;
 }
-img.logo{
-    width: 15vw;
+svg.logo{
+    width: 20vw;
     margin: 40px;
 }
+.cls-1{
+    stroke: white;
+    stroke-width: 2;
+    stroke-dasharray: 1000;
+    stroke-dashoffset: 1000;
+    fill: rgba(255,255,255,0);
+    animation: draw 4s linear forwards;
+    
+}
+@keyframes draw {
+    to {
+      stroke-dashoffset: 0;
+        fill:rgba(255,255,255,1); 
+    }
+  }
 section#landing h1{
     font-size: 1.5em;
 }
@@ -548,25 +563,7 @@ footer ul li a:hover{
     .logo{
         margin-top: 30vh;
     }
-    svg.logo{
-        width: 5vw;
-        margin: 40px;
-    }
-    .cls-1{
-        stroke: white;
-        stroke-width: 2;
-        stroke-dasharray: 1000;
-        stroke-dashoffset: 1000;
-        fill: rgba(255,255,255,0);
-        animation: draw 10s linear forwards;
-        
-    }
-    @keyframes draw {
-        to {
-          stroke-dashoffset: 0;
-            fill:rgba(255,255,255,1); 
-        }
-      }
+    
  }
 /* // --------------------------------------------------------------Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { 
@@ -605,7 +602,7 @@ footer ul li a:hover{
     .logo{
         margin-top: 30vh;
     }
-    img.logo{
+    svg.logo{
         width: 5vw;
         margin: 40px;
     }
@@ -616,5 +613,20 @@ footer ul li a:hover{
  /* --------------------------------------------------------------Internet Explorer */
  @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
 
-
+    .cls-1{
+        stroke: white;
+        stroke-width: 2;
+        stroke-dasharray: 0;
+        stroke-dashoffset: 0;
+        fill: rgba(255,255,255,1);
+        
+    }
+    /* design section */
+    #design-border{
+        margin-top: 20vh;
+    }
+    /* production section */
+    #production-border{
+        margin-top: 5vh;
+    }
  }
